--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ Documentation of libs
 <li><a href=consoletest.html>consoletest.pm</a></li>
 <li><a href=containers/container_images.html>containers/container_images.pm</a></li>
 <li><a href=containers/engine.html>containers/engine.pm</a></li>
+<li><a href=containers/helm.html>containers/helm.pm</a></li>
 <li><a href=containers/k8s.html>containers/k8s.pm</a></li>
 <li><a href=data_integrity_utils.html>data_integrity_utils.pm</a></li>
 <li><a href=db_utils.html>db_utils.pm</a></li>
@@ -71,16 +72,19 @@ Documentation of libs
 <li><a href=grub_utils.html>grub_utils.pm</a></li>
 <li><a href=guest_installation_and_configuration_base.html>guest_installation_and_configuration_base.pm</a></li>
 <li><a href=hacluster.html>hacluster.pm</a></li>
+<li><a href=haclusterbasetest.html>haclusterbasetest.pm</a></li>
 <li><a href=hpc/configs.html>hpc/configs.pm</a></li>
 <li><a href=hpc/formatter.html>hpc/formatter.pm</a></li>
 <li><a href=hpc/utils.html>hpc/utils.pm</a></li>
 <li><a href=hpcbase.html>hpcbase.pm</a></li>
 <li><a href=ipmi_backend_utils.html>ipmi_backend_utils.pm</a></li>
+<li><a href=kdump_utils.html>kdump_utils.pm</a></li>
 <li><a href=known_bugs.html>known_bugs.pm</a></li>
 <li><a href=main_publiccloud.html>main_publiccloud.pm</a></li>
 <li><a href=migration.html>migration.pm</a></li>
 <li><a href=network_utils.html>network_utils.pm</a></li>
 <li><a href=networkdbase.html>networkdbase.pm</a></li>
+<li><a href=nvidia_utils.html>nvidia_utils.pm</a></li>
 <li><a href=opensusebasetest.html>opensusebasetest.pm</a></li>
 <li><a href=package_utils.html>package_utils.pm</a></li>
 <li><a href=parallel_guest_migration_base.html>parallel_guest_migration_base.pm</a></li>
@@ -102,7 +106,6 @@ Documentation of libs
 <li><a href=publiccloud/provider.html>publiccloud/provider.pm</a></li>
 <li><a href=publiccloud/utils.html>publiccloud/utils.pm</a></li>
 <li><a href=python_version_utils.html>python_version_utils.pm</a></li>
-<li><a href=qesapdeployment.html>qesapdeployment.pm</a></li>
 <li><a href=rear.html>rear.pm</a></li>
 <li><a href=registration.html>registration.pm</a></li>
 <li><a href=repo_tools.html>repo_tools.pm</a></li>
@@ -111,6 +114,7 @@ Documentation of libs
 <li><a href=saltbase.html>saltbase.pm</a></li>
 <li><a href=saputils.html>saputils.pm</a></li>
 <li><a href=scheduler.html>scheduler.pm</a></li>
+<li><a href=security/config.html>security/config.pm</a></li>
 <li><a href=selenium.html>selenium.pm</a></li>
 <li><a href=serial_terminal.html>serial_terminal.pm</a></li>
 <li><a href=service_check.html>service_check.pm</a></li>
@@ -118,16 +122,29 @@ Documentation of libs
 <li><a href=sles4sap/azure_cli.html>sles4sap/azure_cli.pm</a></li>
 <li><a href=sles4sap/cloud_zypper_patch.html>sles4sap/cloud_zypper_patch.pm</a></li>
 <li><a href=sles4sap/console_redirection.html>sles4sap/console_redirection.pm</a></li>
+<li><a href=sles4sap/database_hana.html>sles4sap/database_hana.pm</a></li>
+<li><a href=sles4sap/ibsm.html>sles4sap/ibsm.pm</a></li>
 <li><a href=sles4sap/ipaddr2.html>sles4sap/ipaddr2.pm</a></li>
+<li><a href=sles4sap/qesap/qesap_aws.html>sles4sap/qesap/qesap_aws.pm</a></li>
+<li><a href=sles4sap/qesap/qesapdeployment.html>sles4sap/qesap/qesapdeployment.pm</a></li>
+<li><a href=sles4sap/sap_deployment_automation_framework/basetest.html>sles4sap/sap_deployment_automation_framework/basetest.pm</a></li>
+<li><a href=sles4sap/sap_deployment_automation_framework/configure_sap_systems_tfvars.html>sles4sap/sap_deployment_automation_framework/configure_sap_systems_tfvars.pm</a></li>
+<li><a href=sles4sap/sap_deployment_automation_framework/configure_workload_tfvars.html>sles4sap/sap_deployment_automation_framework/configure_workload_tfvars.pm</a></li>
 <li><a href=sles4sap/sap_deployment_automation_framework/deployment.html>sles4sap/sap_deployment_automation_framework/deployment.pm</a></li>
 <li><a href=sles4sap/sap_deployment_automation_framework/deployment_connector.html>sles4sap/sap_deployment_automation_framework/deployment_connector.pm</a></li>
+<li><a href=sles4sap/sap_deployment_automation_framework/inventory_tools.html>sles4sap/sap_deployment_automation_framework/inventory_tools.pm</a></li>
 <li><a href=sles4sap/sap_deployment_automation_framework/naming_conventions.html>sles4sap/sap_deployment_automation_framework/naming_conventions.pm</a></li>
+<li><a href=sles4sap/sap_deployment_automation_framework/networking.html>sles4sap/sap_deployment_automation_framework/networking.pm</a></li>
+<li><a href=sles4sap/sap_host_agent.html>sles4sap/sap_host_agent.pm</a></li>
+<li><a href=sles4sap/sapcontrol.html>sles4sap/sapcontrol.pm</a></li>
 <li><a href=sles4sap_publiccloud.html>sles4sap_publiccloud.pm</a></li>
+<li><a href=sles4sap_publiccloud_basetest.html>sles4sap_publiccloud_basetest.pm</a></li>
 <li><a href=suseconnect_register.html>suseconnect_register.pm</a></li>
 <li><a href=susedistribution.html>susedistribution.pm</a></li>
 <li><a href=thunderbird_common.html>thunderbird_common.pm</a></li>
 <li><a href=transactional.html>transactional.pm</a></li>
 <li><a href=trento.html>trento.pm</a></li>
+<li><a href=usb.html>usb.pm</a></li>
 <li><a href=utils.html>utils.pm</a></li>
 <li><a href=validate_encrypt_utils.html>validate_encrypt_utils.pm</a></li>
 <li><a href=version_utils.html>version_utils.pm</a></li>
@@ -137,6 +154,7 @@ Documentation of libs
 <li><a href=web_browser.html>web_browser.pm</a></li>
 <li><a href=wickedbase.html>wickedbase.pm</a></li>
 <li><a href=x11utils.html>x11utils.pm</a></li>
+<li><a href=xfstests_utils.html>xfstests_utils.pm</a></li>
 <li><a href=xml_utils.html>xml_utils.pm</a></li>
 <li><a href=y2_base.html>y2_base.pm</a></li>
 <li><a href=y2_firstboot_basetest.html>y2_firstboot_basetest.pm</a></li>
